CHANGES
--------

Version 0.6.1-devel

    Fix potential problem with library getting stuck in a loop
    if the peer closed the socket.  Also, break a few more references
    when closing Connections and Channels, to help garbage collection.
    Thanks for majek04@... for pointing these out.

Version 0.6

    Very large rearrangement of code, breaking the large client_0_8.py
    module into submodules based on the various layers of the AMQP protocol.
    The public API is unchanged however, so existing code that uses amqplib
    should be unaffected.

    ----

    nb_client_0_8.py and demos/nbdemo_receive.py were removed because of
    the major changes to the main client to lay the groundwork for future
    non-blocking behaviors (see http://hg.barryp.org/py-amqplib-devel/ )

    ----

    More unittests added.

Version 0.5

    Get rid of Python 2.5-style conditional expressions, for
    compatibility with Python 2.4  Thanks to Alexey Timanovsky
    for pointing this out.

    Send debugging output through the standard Python 'logging' module
    instead of directly printing to the console.

    Reworked the guts of the Connection and Channel classes
    to untangle the mess that controlled how frames were
    waited for and queued up.  Should fix problems seen with
    basic_deliver messages coming when the client is expecting
    responses to other synchronous calls.

    Added non-blocking client and demo, from
    Dmitriy Samovskiy <dmitriy.samovskiy@cohesiveft.com>:
    -----------------------
        We put together an add-on for py-amqplib that implements AMQP client
        with non-blocking sockets (see NonBlockingConnection class and
        nbloop() function in nbclient_0_8.py). nbdemo_receive.py is a demo
        script, and nbclient.zip includes both nbclient_0_8.py and
        nbdemo_receive.py.

        There are at least 2 scenarios where non-blocking sockets help, and
        both are applicable to consumers:
